Fix modal dialog centering scrolling issue
In case the dialog is higher than the viewport the upper part of the
dialog was cut off.
Solution in detail: http://stackoverflow.com/a/33856609

--- a/src/stylesheets/modules/modal_dialog.styl
+++ b/src/stylesheets/modules/modal_dialog.styl
@@ -52,10 +52,9 @@ $modal-transition()
   $modal-transition()
   position: fixed
   display: flex
-  justify-content: center;
-  align-items: center;
   overflow-y: auto
   height: 100vh
+  padding: 1em
   background-color: rgba($colors.contrast-dark, .75)
 
 $modal-dialog-layout()
@@ -64,6 +63,7 @@ $modal-dialog-layout()
   position: relative
   min-width: 520px
   padding: 0
+  margin: auto // Ensure scrolling when dialog height exceeds viewport height.
 
 $modal-dialog-chrome()
   background-color: white
